--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,13 @@
     <color name="color_secondary">#424242</color>
     <color name="color_secondary_variant">#1b1b1b</color>
 
+    <color name="color_background">#f5f5f5</color>
+    <color name="color_surface">#ffffff</color>
+    <color name="color_error">#d50000</color>
+
     <color name="color_on_primary">#000000</color>
     <color name="color_on_secondary">#ffffff</color>
+    <color name="color_on_background">#000000</color>
+    <color name="color_on_surface">#000000</color>
+    <color name="color_on_error">#ffffff</color>
 </resources>
