--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,7 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="main_padding_small">4dp</dimen>
-    <dimen name="img_item_size">80dp</dimen>
+    <dimen name="img_item_size">40dp</dimen>
     <dimen name="app_bar_height">220dp</dimen>
     <dimen name="imageView_margin">2dp</dimen>
     <dimen name="imageView_inset">-4dp</dimen>
@@ -9,4 +9,6 @@
     <dimen name="text_margin">16dp</dimen>
     <dimen name="item_beight_threeLine">88dp</dimen>
     <dimen name="item_padding_vertical">16dp</dimen>
+    <dimen name="item_padding_horizontal">16dp</dimen>
+    <dimen name="item_text_size_secondary">12sp</dimen>
 </resources>
