--- a/app/src/main/res/layout/item_artist.xml
+++ b/app/src/main/res/layout/item_artist.xml
@@ -13,7 +13,7 @@
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imgFoto"
         android:layout_width="@dimen/img_item_size"
-        android:layout_height="80dp"
+        android:layout_height="@dimen/img_item_size"
         android:src="@drawable/ic_account_box"
         android:layout_marginStart="@dimen/item_padding_horizontal"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,14 +33,26 @@
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvNombre"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="@string/artist_hint_nombre"
-        android:maxLines="2"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:layout_margin="@dimen/main_padding_small"
-        android:layout_toEndOf="@id/imgFoto"
-        android:layout_toStartOf="@+id/tvOrden"
-        android:layout_centerVertical="true"/>
+        android:textAppearance="@style/ItemLarge"
+        android:layout_marginStart="@dimen/item_padding_horizontal"
+        android:layout_marginEnd="@dimen/item_padding_horizontal"
+        app:layout_constraintStart_toEndOf="@id/imgFoto"
+        app:layout_constraintEnd_toStartOf="@id/tvOrden"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvNote"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:hint="@string/artist_hint_notas"
+        android:textAppearance="@style/ItemMedium"
+        android:layout_marginBottom="@dimen/item_padding_vertical"
+        app:layout_constraintStart_toStartOf="@id/tvNombre"
+        app:layout_constraintEnd_toEndOf="@id/tvNombre"
+        app:layout_constraintTop_toBottomOf="@id/tvNombre"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
