--- a/app/src/main/res/layout/item_artist.xml
+++ b/app/src/main/res/layout/item_artist.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/containerMain"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/item_beight_threeLine"
+    android:layout_height="@dimen/item_height_threeLine"
     android:paddingTop="@dimen/item_padding_vertical"
     android:clickable="true"
     android:focusable="true"
@@ -53,6 +53,14 @@
         app:layout_constraintStart_toStartOf="@id/tvNombre"
         app:layout_constraintEnd_toEndOf="@id/tvNombre"
         app:layout_constraintTop_toBottomOf="@id/tvNombre"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
+    <View
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:background="@color/color_divider"
+        app:layout_constraintStart_toStartOf="@id/tvNombre"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
