--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,7 +7,7 @@
     <dimen name="imageView_inset">-4dp</dimen>
     <dimen name="imageView_radius">18dp</dimen>
     <dimen name="text_margin">16dp</dimen>
-    <dimen name="item_beight_threeLine">88dp</dimen>
+    <dimen name="item_height_threeLine">88dp</dimen>
     <dimen name="item_padding_vertical">16dp</dimen>
     <dimen name="item_padding_horizontal">16dp</dimen>
     <dimen name="item_text_size_secondary">12sp</dimen>
