Vista AddArtist_ Text Fields

--- a/app/src/main/res/layout/activity_add_artist.xml
+++ b/app/src/main/res/layout/activity_add_artist.xml
@@ -69,8 +69,12 @@
             </FrameLayout>
 
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/tilNombre"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                app:helperText="@string/addArtist_help_required"
+                app:startIconDrawable="@drawable/ic_person"
+                style="@style/MyTheme.DayNight.TextInputLayout">
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/etNombre"
                     android:layout_width="match_parent"
@@ -81,8 +85,12 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/tilApellidos"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                app:helperText="@string/addArtist_help_required"
+                app:startIconDrawable="@drawable/ic_person"
+                style="@style/MyTheme.DayNight.TextInputLayout">
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/etApellidos"
                     android:layout_width="match_parent"
@@ -103,7 +111,10 @@
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="50">
+                    android:layout_weight="50"
+                    android:layout_marginEnd="@dimen/common_padding_min"
+                    app:startIconDrawable="@drawable/ic_insert_invitation"
+                    style="@style/MyTheme.DayNight.TextInputLayout">
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/etFechaNacimiento"
                         android:layout_width="match_parent"
@@ -113,9 +124,13 @@
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/tilEstatura"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="50">
+                    android:layout_weight="50"
+                    android:layout_marginStart="@dimen/common_padding_min"
+                    app:helperText="@string/addArtist_help_estaturaMin"
+                    style="@style/MyTheme.DayNight.TextInputLayout">
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/etEstatura"
                         android:layout_width="match_parent"
@@ -128,7 +143,9 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                app:startIconDrawable="@drawable/ic_place"
+                style="@style/MyTheme.DayNight.TextInputLayout">
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/etLugarNacimiento"
                     android:layout_width="match_parent"
@@ -140,7 +157,9 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:layout_marginBottom="@dimen/item_padding_vertical"
+                style="@style/MyTheme.DayNight.TextInputLayout">
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/etNotas"
                     android:layout_width="match_parent"
